RESOLVED FIXED313838
[JSC][WASM][Debugger] Fix STW deadlocks when VM blocks in memory.atomic.wait or WebCore operations
https://bugs.webkit.org/show_bug.cgi?id=313838
Summary [JSC][WASM][Debugger] Fix STW deadlocks when VM blocks in memory.atomic.wait ...
Yijia Huang
Reported 2026-05-01 12:34:17 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-01 12:34:23 PDT
Yijia Huang
Comment 2 2026-05-01 13:53:15 PDT
Yijia Huang
Comment 3 2026-05-04 09:47:25 PDT
EWS
Comment 4 2026-05-07 11:00:22 PDT
Committed 312813@main (da1f31b2f431): <https://commits.webkit.org/312813@main> Reviewed commits have been landed. Closing PR #64177 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.