Source/JavaScriptCore/wasm/debugger/WasmDebugServer.cpp
@@ -60,6 +60,7 @@ WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
 #include <wtf/Assertions.h>
 #include <wtf/DataLog.h>
 #include <wtf/HexNumber.h>
+#include <wtf/Lock.h>
 #include <wtf/NeverDestroyed.h>
 #include <wtf/Scope.h>
 #include <wtf/Threading.h>
@@ -83,6 +84,14 @@ DebugServer::DebugServer()
 
 bool DebugServer::start()
 {
+    // Guard against concurrent start() calls from $.agent.start() workers in the jsc shell
+    // and against the createAndBindServerSocket() race below.
+    static Lock initLock;
+    Locker locker { initLock };
+
+    if (isInService())
+        return true;
+
     if (!createAndBindServerSocket())
         return false;
 
