Source/WebCore/Modules/filesystem/WorkerFileSystemStorageConnection.cpp
@@ -32,6 +32,7 @@
 #include "FileSystemSyncAccessHandle.h"
 #include "WorkerGlobalScope.h"
 #include "WorkerLoaderProxy.h"
+#include "WorkerSTWParticipation.h"
 #include "WorkerThread.h"
 #include <wtf/Scope.h>
 
@@ -294,7 +295,8 @@ void WorkerFileSystemStorageConnection::createSyncAccessHandle(FileSystemHandleI
 
 void WorkerFileSystemStorageConnection::closeSyncAccessHandle(FileSystemHandleIdentifier identifier, FileSystemSyncAccessHandleIdentifier accessHandleIdentifier)
 {
-    if (!m_scope)
+    RefPtr scope = m_scope.get();
+    if (!scope)
         return;
 
     BinarySemaphore semaphore;
@@ -303,7 +305,7 @@ void WorkerFileSystemStorageConnection::closeSyncAccessHandle(FileSystemHandleId
             semaphore.signal();
         });
     });
-    semaphore.wait();
+    waitWithSTWParticipation(semaphore, scope->vm());
 }
 
 void WorkerFileSystemStorageConnection::closeSyncAccessHandle(FileSystemHandleIdentifier, FileSystemSyncAccessHandleIdentifier, EmptyCallback&&)
@@ -474,7 +476,8 @@ void WorkerFileSystemStorageConnection::move(FileSystemHandleIdentifier identifi
 
 std::optional<uint64_t> WorkerFileSystemStorageConnection::requestNewCapacityForSyncAccessHandle(FileSystemHandleIdentifier identifier, FileSystemSyncAccessHandleIdentifier accessHandleIdentifier, uint64_t newCapacity)
 {
-    if (!m_scope)
+    RefPtr scope = m_scope.get();
+    if (!scope)
         return std::nullopt;
 
     if (!m_mainThreadConnection)
@@ -489,7 +492,7 @@ std::optional<uint64_t> WorkerFileSystemStorageConnection::requestNewCapacityFor
         };
         mainThreadConnection->requestNewCapacityForSyncAccessHandle(identifier, accessHandleIdentifier, newCapacity, WTF::move(mainThreadCallback));
     });
-    semaphore.wait();
+    waitWithSTWParticipation(semaphore, scope->vm());
     return grantedCapacity;
 }
 
